cli: move SchedOptHandler to sched target directory
Change-Id: Ic00b53315daa1a9752b92de1cef05e14324a94e5
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14902
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -13,6 +13,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/action/create.py \
 	   phobos/cli/action/delete.py \
 	   phobos/cli/action/dump.py \
+	   phobos/cli/action/fair_share.py \
 	   phobos/cli/action/format.py \
 	   phobos/cli/action/get.py \
 	   phobos/cli/action/getmd.py \
@@ -43,6 +44,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/target/media.py \
 	   phobos/cli/target/object.py \
 	   phobos/cli/target/phobosd.py \
+	   phobos/cli/target/sched.py \
 	   phobos/cli/target/store.py \
 	   phobos/cli/target/rados.py \
 	   phobos/cli/target/tape.py \
