cli: move GetOptHandler to store target directory
Change-Id: I36426745344b7643645295c71c260adcd5be3bde
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14932
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -14,6 +14,8 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/action/delete.py \
 	   phobos/cli/action/dump.py \
 	   phobos/cli/action/format.py \
+	   phobos/cli/action/get.py \
+	   phobos/cli/action/getmd.py \
 	   phobos/cli/action/list.py \
 	   phobos/cli/action/lock.py \
 	   phobos/cli/action/ping.py \
@@ -36,6 +38,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/target/media.py \
 	   phobos/cli/target/object.py \
 	   phobos/cli/target/phobosd.py \
+	   phobos/cli/target/store.py \
 	   phobos/cli/target/rados.py \
 	   phobos/cli/target/tape.py \
 	   phobos/cli/target/tlc.py \
