cli: move PutOptHandler to store target directory
Change-Id: I0849143e776a7c4dd13b0714d7633f1620030c74
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14933
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -18,7 +18,9 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/action/getmd.py \
 	   phobos/cli/action/list.py \
 	   phobos/cli/action/lock.py \
+	   phobos/cli/action/mput.py \
 	   phobos/cli/action/ping.py \
+	   phobos/cli/action/put.py \
 	   phobos/cli/action/resource_delete.py \
 	   phobos/cli/action/status.py \
 	   phobos/cli/action/unlock.py \
