metrology: add 'phobos stats' command in CLI
+add test in tests/externs/cli

Change-Id: I874c610d14eff67c23df29b0d4da3547521484c7
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -45,6 +45,7 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/cli/target/object.py \
 	   phobos/cli/target/phobosd.py \
 	   phobos/cli/target/sched.py \
+	   phobos/cli/target/stats.py \
 	   phobos/cli/target/store.py \
 	   phobos/cli/target/rados.py \
 	   phobos/cli/target/tape.py \
