--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -146,6 +146,7 @@ register-python-argcomplete phobos > %{buildroot}/%{_sysconfdir}/bash_completion
 
 %{_libdir}/libphobos_store.so*
 %{_libdir}/libphobos_admin.so*
+%{_libdir}/phobos/libpho_core.so*
 %{_libdir}/phobos/libpho_*_dir.so*
 %{_libdir}/phobos/libpho_*_tape.so*
 %{_libdir}/phobos/libpho_*_ltfs.so*
