hsm: new hsm_sync_dir command
This command sync objects of the local dir.

Change-Id: I82bf52ccdb07fe86e53db5806df93b333f4d4163
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -168,6 +168,7 @@ register-python-argcomplete phobos > %{buildroot}/%{_sysconfdir}/bash_completion
 %{_sbindir}/phobos_tape_library_mtx_test.bash
 %{_sbindir}/phobos_tlc
 %{_unitdir}/phobos_tlc.service
+%{_sbindir}/phobos_hsm_sync_dir
 %{_mandir}/man1/*
 
 %config(noreplace) %{_sysconfdir}/phobos.conf
