hsm: use and record of last synced date
hsm_sync_dir command saves in a file the last synced date.

Change-Id: I9da8b3efdc2bf870b4439ecc0eae872def8db05c
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -287,3 +287,11 @@ port = 20123
 
 # path to library changer for the server
 lib_device = /dev/changer
+
+[hsm]
+# Path to the file containing the last time `phobos hsm_sync_dir` was called"
+# The synced ctime file must contains a 'date +"%Y-%m-%d %H:%M:%S.%6N"' value,
+# of format"YYYY-mm-dd HH:MM:SS.uuuuuu", always 26 characters.
+# Example: ""2025-09-26 18:17:07.548048"
+# Default: "/var/lib/phobos/hsm_synced_ctime"
+#synced_time_path = /var/lib/phobos/hsm_synced_ctime
