lrs_sched: ordered grouped read
The grouped read scheduler is now able to order the request by following
their COS and priority, ie: the ctime of the corresponding copy.

This patch integrates the github pull request #55.

Change-Id: I362785693fd685f08330f699ecd2db8f0d1f25a1
Signed-off-by: Patrice LUCAS <patrice.lucas@ayudata.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -49,6 +49,14 @@ dispatch_algo = none
 # Same as io_sched_dir section but for tape family
 [io_sched_tape]
 read_algo = grouped_read
+# If ordered_grouped_read is set to "true", grouped_read will use the QOS and
+# priority fields of each request to order them per medium queue.
+# If ordered_grouped_read is set to "false", grouped_read will use fifo order.
+# The priority of each read request corresponds to the ctime of the object copy
+# to get, ensuring older copies will be scheduled first to follow past written
+# order.
+# Default: true
+# ordered_grouped_read = true
 write_algo = fifo
 format_algo = fifo
 
