hsm: add a config delay before syncing
The time window goes from last synced ctime to the delay before
the current time.

Change-Id: If93574e9382f9dbb4e61f7b1355f51d7585ad1cc
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -295,3 +295,7 @@ lib_device = /dev/changer
 # Example: ""2025-09-26 18:17:07.548048"
 # Default: "/var/lib/phobos/hsm_synced_ctime"
 #synced_time_path = /var/lib/phobos/hsm_synced_ctime
+
+# Delay in second before an object is synced
+# Default: "0"
+#sync_delay_second = 0
