hsm: phobos_hsm_release_dir command
This command deletes copies on local dirs.

Change-Id: Ic1bf9edb5591d29081b4a9be078c0f666d11bc0f
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -311,3 +311,22 @@ lib_device = /dev/changer
 # Delay in second before an object is synced
 # Default: "0"
 #sync_delay_second = 0
+
+# Delay in second before an object is released
+# Default: "0"
+#release_delay_second = 0
+
+# Filling limit to start a release purge of a dir
+# This value must be an integer percentage (between 1 and 100), strictly higher
+# than dir_release_lower_threshold.
+# A value of 100 means that no release purge will never happen.
+# Default: "95"
+#dir_release_higher_threshold = 95
+#
+# Filling limit to achieve when purging a dir
+# This value must be an integer percentage (between 0 and 99), strictly lower
+# than dir_release_higher_threshold.
+# A value of 0 means that if a release purge starts, every selectable copy
+# will be deleted.
+# Default: "80"
+#dir_release_lower_threshold = 80
