--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -61,6 +61,7 @@ check_SCRIPTS=acceptance.test \
               test_group_sync.sh \
               test_grouping.test \
               test_hsm_sync_dir.test \
+              test_hsm_release_dir.test \
               test_import.test \
               test_ldm.sh \
               test_list_sort.test \
