lrs: add 'adm_status' to phobos drive status output
Change-Id: I6173ab5ead60297c846e184049f8905f3bf7bfcb
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -66,7 +66,7 @@ check_SCRIPTS=acceptance.test \
               test_lock_clean.sh \
               test_logs.test \
               test_lrs.test \
-              test_lrs_drive_status.sh \
+              test_lrs_drive_status.test \
               test_lrs_scheduling.test \
               test_media.test \
               test_media_delete.test \
