pkg: update to 3.2.0
Change-Id: I206efb553db83096d92616e053623d0f97a31aed
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -5,9 +5,9 @@
 AC_PREREQ(2.59)
 
 m4_define([PHOBOS_VERSION_MAJOR], [3])
-m4_define([PHOBOS_VERSION_MINOR], [1])
+m4_define([PHOBOS_VERSION_MINOR], [2])
 m4_define([PHOBOS_VERSION_PATCH], [0])
-m4_define([PHOBOS_VERSION_RELEASE], [0])
+m4_define([PHOBOS_VERSION_RELEASE], [1])
 
 m4_define([PHOBOS_VERSION],
           [PHOBOS_VERSION_MAJOR.PHOBOS_VERSION_MINOR.PHOBOS_VERSION_PATCH])
@@ -20,6 +20,7 @@ AC_DEFINE_UNQUOTED(PHOBOS_MINOR, PHOBOS_VERSION_MINOR,
 AC_DEFINE_UNQUOTED(PHOBOS_PATCH, PHOBOS_VERSION_PATCH,
                    [Phobos patch version number])
 AC_DEFINE_UNQUOTED(PHOBOS_RELEASE, PHOBOS_VERSION_RELEASE, [release info])
+PHOBOS_RELEASE="PHOBOS_VERSION_RELEASE"
 AC_SUBST(PHOBOS_RELEASE)
 
 
