doc: add copy profile example to doc template
Change-Id: I5265902c2b764ca2af36a0f548f30f3141f4f6d2
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -211,11 +211,18 @@ layout = raid1
 lyt-params = repl_count=1
 library = legacy
 
+[profile "tape_raid4"]
+layout = raid4
+family = tape
+
 [copy]
 default_copy_name = source
 
 # List of copies to be retrieved in priority order
 get_preferred_order=fast,cache
+
+[copy "big_on_tape"]
+profile = tape_raid4
 
 ######### Tape/drive support and compatibility rules ########
 # You should not modify the following configuration unless:
