--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -297,8 +297,10 @@ port = 20123
 # It's also possible to force listening to a given interface
 #listen_interface = admin0
 
-# path to library changer for the server
+# List of library changer for the server
+# (comma-separated lists without any space)
 lib_device = /dev/changer
+#lib_device = /dev/changer0,/dev/changer1,/dev/changer2
 
 [hsm]
 # Path to the file containing the last time `phobos hsm_sync_dir` was called"
