cfg: add tlc max_device_retry parameter
The TLC max_device_retry parameter has been added to tell how many
different lib device we should use before a scsi request is consider
as failed.

Change-Id: Iae5f4a2c6b600a303ef61ee97229d6cee42dbed8
Signed-off-by: Gauthier EVRAERD <Gauthier.EVRAERD@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -302,6 +302,10 @@ port = 20123
 lib_device = /dev/changer
 #lib_device = /dev/changer0,/dev/changer1,/dev/changer2
 
+# Number of lib devices to try before considering a SCSI request as failed.
+# Minimum: 1, Maximum: number of open lib devices. Default will use 1.
+max_device_retry = 1
+
 [hsm]
 # Path to the file containing the last time `phobos hsm_sync_dir` was called"
 # The synced ctime file must contains a 'date +"%Y-%m-%d %H:%M:%S.%6N"' value,
