admin: add the layout dependency for ubuntu 22.04
On ubuntu 22.04, the compiler/linker behaviour is different and
we need to explicitly add the libpho_layout dependency to admin
to resolv the layout_reconstruct function.

This commit solves the IN2P3 github issue #7
(https://github.com/cea-hpc/phobos/issues/7) .

Change-Id: If6806e56f99599b3048db64e40f154a633080819
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/admin/Makefile.am
+++ b/src/admin/Makefile.am
@@ -9,5 +9,6 @@ libphobos_admin_la_LIBADD=../core/libpho_core.la \
                           ../io/libpho_io.la ../ldm/libpho_ldm.la \
                           ../layout-modules/libpho_layout_raid1.la \
                           ../io-modules/libpho_io_adapter_posix.la \
-                          ../io-modules/libpho_io_adapter_ltfs.la
+                          ../io-modules/libpho_io_adapter_ltfs.la \
+                          ../layout/libpho_layout.la
 libphobos_admin_la_CFLAGS=$(AM_CFLAGS) -I../io-modules -I../layout-modules
